--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="pt">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="src/assets/images/L.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apresentação Pessoal - projeto frontend fusion</title>
   </head>
